Refactor SecurityConfig for CORS and CSRF settings